NEWS for File::Util

Mon Feb 25 14:07:13 CST 2013
   A vast number of optimizations have been applied to recursive calls in
   methods like list_dir() which bring it more-than-up-to-par with mainstream
   modules for directory searching and traversal in terms of performance.

   Windows-specific bug fixes have been added, necessary in great part due
   to the non-posix nature of its filesystems and its lack of support for
   the CORE::stat() function.

Sun Feb 10 21:32:36 CST 2013
   More added to the TODO list since the last news update.  We have now a
   4.x build that is CPAN ready (as a TRIAL).  The manual has been combed
   through and polished off, the test suite has been greatly improved thanks
   to newer/better "diesnice" tests made possible by Test::Fatal.  Several
   bugs have been caught and put to rest due to the expanded testing,
   because the improved tests revealed them where they had been hiding.

Tue Jan 29 18:59:25 CST 2013
   Most of the goals in the TODO list have been finished, or well on course
   for completion.  Stability of new features and design are sufficient
   enough that I feel like we're ready for the first CPAN release of the 4.x
   series in the next few days probably.

   Remaining tasks will be the ongoing improvement of the test suite and the
   documentation.  Those are the kind of tasks that are seemingly "never done".

   Everything is testing well, performing well, running well on all platforms
   I have available for testing (which are many).  Overall the state of
   the File::Util distribution and code is better than ever.

Tue Jan 22 00:28:30 CST 2013
   Version 4.000000 has (and never will be) released to the CPAN, as it was
   still in active development at the time it hit that mark.  Development
   continues, and the first formal release of the 4.x version distributions
   is soon approaching.  Documentation seems all that is left.  There's a